--- a/Client/src/components/Assets/CSS/Login.css
+++ b/Client/src/components/Assets/CSS/Login.css
@@ -1,17 +1,63 @@
+  .App{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+input{
+    flex-direction: column;
+}
+
 .card{
     display: flex;
-    position: absolute;
+    position: relative;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     top: 90px;
-    right: 750px;
     width: 450px;
-    height: 525px ;
+    height: 525px;
     background: rgb(255, 255,255);
-    border-radius: 0.4em;
+    border-radius: 0.9em;
     box-shadow: 0.3em 0.3em 0.7em #00000015;
     transition: border 0.5s cubic-bezier(0.175,0.885,0.32,1.275);
     border: rgb(250, 250,250)0.2em solid;
 }
 
 .card:hover{
-    border:#006fff 0.2em solid ;
+    border:rgb(55, 202, 255) 0.2em solid ;
+    box-shadow: rgb(55, 202, 255) 0px 7px 29px 0px;
 }
+
+
+
+
+   /* button */
+
+   button {
+    margin-top: 30px;
+    padding: 17px 40px;
+    border-radius: 50px;
+    border: 0;
+    background-color: white;
+    box-shadow: rgb(0 0 0 / 5%) 0 0 8px;
+    letter-spacing: 1.5px;
+    text-transform: uppercase;
+    font-size: 15px;
+    transition: all .5s ease;
+   }
+   
+   button:hover {
+    letter-spacing: 3px;
+    background-color: rgb(55, 202, 255);
+    color: hsl(0, 0%, 100%);
+    box-shadow: rgb(55, 202, 255) 0px 7px 29px 0px;
+   }
+   
+   button:active {
+    letter-spacing: 3px;
+    background-color: hsl(55, 202, 255);
+    color: hsl(0, 0%, 100%);
+    box-shadow: rgb(55, 202, 255) 0px 0px 0px 0px;
+    transform: translateY(10px);
+    transition: 100ms;
+   }
