--- a/Client/src/components/Assets/CSS/Login.css
+++ b/Client/src/components/Assets/CSS/Login.css
@@ -1,4 +1,5 @@
   .App{
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,7 +14,7 @@ input{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    top: 90px;
+    top: 190px;
     width: 450px;
     height: 525px;
     background: rgb(255, 255,255);
@@ -28,7 +29,34 @@ input{
     box-shadow: rgb(55, 202, 255) 0px 7px 29px 0px;
 }
 
-
+/* input */
+input {
+    line-height: 28px;
+    border: 2px solid transparent;
+    border-bottom-color: #777;
+    padding: .2rem 0;
+    outline: none;
+    background-color: transparent;
+    color: #0d0c22;
+    transition: .3s cubic-bezier(0.645, 0.045, 0.355, 1);
+   }
+   
+   .input:focus, input:hover {
+    outline: none;
+    padding: .2rem 1rem;
+    border-radius: 1rem;
+    border-color:  #777;
+    ;
+   }
+   
+   .input::placeholder {
+    color: #777;
+   }
+   
+   .input:focus::placeholder {
+    opacity: 0;
+    transition: opacity .3s;
+   }
 
 
    /* button */
@@ -41,8 +69,8 @@ input{
     background-color: white;
     box-shadow: rgb(0 0 0 / 5%) 0 0 8px;
     letter-spacing: 1.5px;
-    text-transform: uppercase;
-    font-size: 15px;
+    color: #777;
+    
     transition: all .5s ease;
    }
    
