--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -1,7 +1,11 @@
 
-body{
-   
+body{ 
+    
     background-image:url('./components/Assets/img/4094501.jpg');
     background-repeat: no-repeat;
     background-size:100%;
+}
+
+h1{
+    color: #777;
 }
