--- a/Client/src/components/Assets/CSS/Login.css
+++ b/Client/src/components/Assets/CSS/Login.css
@@ -4,6 +4,17 @@
     justify-content: center;
     align-items: center;
   }
+   body{
+    min-height: 100vh;
+   }
+  .back{
+    background-image: url('../img/4094501.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height:100vh;
+  
+        
+  }
 input{
     flex-direction: column;
 }
@@ -15,6 +26,7 @@ input{
     align-items: center;
     justify-content: center;
     top: 190px;
+    left: 400px;
     width: 450px;
     height: 525px;
     background: rgb(255, 255,255);
@@ -91,6 +103,9 @@ input {
    }
 
    p{
+    position:relative;
+    top: 90px;
+
     font-size: 10px;
    }
    .bir{
@@ -106,5 +121,5 @@ input {
 .boat{
   width: 300px;
    position: relative;
-  left: 600px;
+  left: 1400px;
 }
