--- a/Client/src/components/Assets/CSS/Login.css
+++ b/Client/src/components/Assets/CSS/Login.css
@@ -25,7 +25,7 @@ input{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    top: 190px;
+    top: 20px;
     left: 400px;
     width: 450px;
     height: 525px;
@@ -35,7 +35,9 @@ input{
     transition: border 0.5s cubic-bezier(0.175,0.885,0.32,1.275);
     border: rgb(250, 250,250)0.2em solid;
 }
-
+.sun{
+  width: 190px;
+}
 .card:hover{
     border:rgb(55, 202, 255) 0.2em solid ;
     box-shadow: rgb(55, 202, 255) 0px 7px 29px 0px;
@@ -122,4 +124,5 @@ input {
   width: 300px;
    position: relative;
   left: 1400px;
+  bottom: 200px;
 }
