--- a/Client/src/components/Assets/CSS/Login.css
+++ b/Client/src/components/Assets/CSS/Login.css
@@ -31,11 +31,15 @@ input{
     left: 400px;
     width: 450px;
     height: 525px;
-    background: rgb(255, 255,255);
+    /* effect glass eto */
+    background: linear-gradient(135deg,rgba(255,255,255,0.1),rgba(255,255,255,0));
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     border-radius: 0.9em;
-    box-shadow: 0.3em 0.3em 0.7em #00000015;
+    box-shadow: 0 8px 32px 0 rgba(0,0,0,0.37);
+    /* -------------------- */
     transition: border 0.5s cubic-bezier(0.175,0.885,0.32,1.275);
-    border: rgb(250, 250,250)0.2em solid;
+    border: rgb(250, 250,250,0.18) solid;
 }
 .sun{
   width: 190px;
