--- a/Client/src/components/Assets/CSS/Login.css
+++ b/Client/src/components/Assets/CSS/Login.css
@@ -36,7 +36,7 @@ input{
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     border-radius: 0.9em;
-    box-shadow: 0 8px 32px 0 rgba(0,0,0,0.37);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.134);
     /* -------------------- */
     transition: border 0.5s cubic-bezier(0.175,0.885,0.32,1.275);
     border: rgb(250, 250,250,0.18) solid;
@@ -86,7 +86,9 @@ input {
     padding: 17px 40px;
     border-radius: 50px;
     border: 0;
-    background-color: white;
+    background: linear-gradient(135deg,rgba(255,255,255,0.1),rgba(255,255,255,0));
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     box-shadow: rgb(0 0 0 / 5%) 0 0 8px;
     letter-spacing: 1.5px;
     color: #777;
